# Peer-to-Peer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: NetworkManager.h  PeerManager.h  VideoManager.h  WebServer.h
src/: NetworkManager.cpp  PeerManager.cpp  VideoManager.cpp  WebServer.cpp  main.cpp
static/: app.js  styles.css
